@@ -2,7 +2,7 @@
 
 AUTOMAKE_OPTIONS = foreign
 
-@Make_rules@
+include $(top_srcdir)/Make-rules
 
 java_sources = \
   Children.java \
@@ -18,6 +18,16 @@ java_sources = \
   ValuesFilter.java \
   XMLFormat.java
 
+java_BUILT = \
+  Focus.java
+
 PACKAGE_FNAME = gnu-xquery-util
+
+BUILT_SOURCES = $(java_BUILT)
+EXTRA_DIST = Focus.java.in
+
+Focus.java:  $(srcdir)/Focus.java.in
+	sed $(DONT_EDIT_SUBS) $(SED_REFERENCES_SUBS) \
+	  <$(srcdir)/Focus.java.in >Focus.java
 
 all: Makefile java-classes.stamp $(@GCJ_COMPILED_SELECTED@)
