@@ -1,3 +1,8 @@
+2002-03-02  Per Bothner  <per@bothner.com>
+
+	* Focus.java.in:  New sed-processed class, extends SeqPosition.
+	* Makefile.am:  Update accordingly.
+
 2002-02-13  Per Bothner  <per@bothner.com>
 
 	* MakeAttribute.java (apply):  Do getNextArg inside loop.
